feat: Atualiza página Sobre Nós, logo e navegação

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SunMind Tech | IA para Integradores de Energia Solar</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="Transforme seu negócio solar com inteligência artificial. Resposta a leads em 5 segundos, +30% de conversão e automação completa para integradores de energia solar." />
     <meta name="author" content="SunMind Tech" />
     <meta name="keywords" content="energia solar, inteligência artificial, integradores solares, conversão de leads, automação, CRM solar" />
